<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:paddingTop="8dp">

    <EditText
        android:id="@+id/etAuthEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etAuthPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/auth_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogleAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/auth_google"
        app:icon="@drawable/ic_person"
        app:iconGravity="textStart"
        app:iconPadding="8dp" />

</LinearLayout>